--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "sweetalert2": "^11.14.5",
+    "vercel": "^41.4.1",
     "webpack": "^5.97.1"
   },
   "devDependencies": {
